ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser618973/input.ts.stderr
error: Expected {, got export
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser618973/input.ts:1:8
  |
1 | export export class Foo {
  |        ^^^^^^

